objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AW_LeadConvertedKey__c</fullName>
        <description>Formula Generated Key for Lead at time of conversion</description>
        <formula>IF
( 
ISBLANK(Owner:User.AW_UACFID__c) || ISBLANK(ConvertedDate), 
&apos;&apos;, 
TEXT
(
FLOOR
(
( 
ConvertedDate  - DATE(YEAR(ConvertedDate),1,1) 
+WEEKDAY(DATE(YEAR(ConvertedDate),1,1))-2
)/7 
)+1
)
&amp; 
TEXT(YEAR(ConvertedDate))
&amp;  UPPER(Owner:User.AW_UACFID__c)  
)</formula>
        <label>Lead Converted Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LeadCreatedKey__c</fullName>
        <description>Formula Generated Key for Lead at time of creation</description>
        <formula>IF 
( 
ISBLANK(Owner:User.AW_UACFID__c), 
&apos;&apos;, 
TEXT 
( 
FLOOR 
( 
( 
DATEVALUE( CreatedDate ) - DATE(YEAR(DATEVALUE(CreatedDate)),1,1) 
+WEEKDAY(DATE(YEAR(DATEVALUE(CreatedDate)),1,1))-2 
)/7 
)+1 
) 
&amp; 
TEXT(YEAR(DATEVALUE(CreatedDate))) 
&amp;  UPPER(Owner:User.AW_UACFID__c)
)</formula>
        <label>Lead Created Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LeadManager__c</fullName>
        <description>Captures the name of the Lead Manager who actioned the Lead.</description>
        <label>Lead Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LeadOwnerProfile__c</fullName>
        <description>Profile of the lead owner</description>
        <formula>Owner:User.Profile.Name</formula>
        <label>LeadOwnerProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LeadReference__c</fullName>
        <description>Stores the lead Id that serves as the lead reference from the source of the lead.</description>
        <label>Lead Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LeadSmokerRates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes smoker rates for lead</description>
        <label>Smoker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusDurationContacted__c</fullName>
        <description>The time for which the lead was in Contacted Status</description>
        <label>Lead Status Duration - Contacted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusDurationEngagementHeld__c</fullName>
        <description>The time for which the lead was in Engagement Held Status</description>
        <label>Lead Status Duration - Engagement Held</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusDurationEngagementScheduled__c</fullName>
        <description>The time for which the lead was in Engagement Scheduled Status</description>
        <label>Lead Status Duration - Engagement Sche</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusDurationLost__c</fullName>
        <description>The time for which the lead was in Lost Status</description>
        <label>Lead Status Duration - Lost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusDurationNew__c</fullName>
        <description>The time for which the lead was in New Status</description>
        <label>Lead Status Duration - New</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusDurationProspect__c</fullName>
        <description>The time for which the lead was in Prospect Status</description>
        <label>Lead Status Duration - Prospect</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusDurationQualified__c</fullName>
        <description>The time for which the lead was in Qualified Status</description>
        <label>Lead Status Duration - Qualified</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusDurationWon__c</fullName>
        <description>The time for which the lead was in Won Status</description>
        <label>Lead Status Duration - Won</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusNegativeSetting__c</fullName>
        <description>Used to calculate negative SLA setting for the current stage</description>
        <formula>CASE 
( 
    TEXT(Status), 
    &quot;New&quot;, $CustomMetadata.AW_StatusSLASetting__mdt.New_Status_Setting.AW_Negative__c ,  
    &quot;Initiate 1st Contact&quot;, $CustomMetadata.AW_StatusSLASetting__mdt.Contacted_Status_Setting.AW_Negative__c ,  
    &quot;ScheduleEngagement&quot;, $CustomMetadata.AW_StatusSLASetting__mdt.Engagement_Scheduled_Status_Setting.AW_Negative__c ,
    &quot;Hold Engagement&quot;, $CustomMetadata.AW_StatusSLASetting__mdt.Engagement_Held_Status_Setting.AW_Negative__c ,
    $CustomMetadata.AW_StatusSLASetting__mdt.New_Status_Setting.AW_Negative__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status Negative Setting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusPositiveSetting__c</fullName>
        <description>Used to calculate positive SLA setting for the current stage</description>
        <formula>CASE
(
    TEXT(Status), 
    &quot;New&quot;,  $CustomMetadata.AW_StatusSLASetting__mdt.New_Status_Setting.AW_Positive__c , 
    &quot;Initiate 1st Contact&quot;,  $CustomMetadata.AW_StatusSLASetting__mdt.Contacted_Status_Setting.AW_Positive__c ,
    &quot;ScheduleEngagement&quot;,  $CustomMetadata.AW_StatusSLASetting__mdt.Engagement_Scheduled_Status_Setting.AW_Positive__c ,
    &quot;Hold Engagement&quot;, $CustomMetadata.AW_StatusSLASetting__mdt.Engagement_Held_Status_Setting.AW_Positive__c  ,
    $CustomMetadata.AW_StatusSLASetting__mdt.New_Status_Setting.AW_Positive__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status Positive Setting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_LeadStatusReason__c</fullName>
        <description>Displays list of possible lead statuses</description>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LeadTimeCalculated__c</fullName>
        <description>Overall time since the lead has been created</description>
        <formula>TEXT( 
ROUND( 540 * ( 
( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 8) ) / 7) + 
MIN(5, 
MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) + 
MIN( 1, 1440 /  540* ( MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 06:00:00&apos; ), 1 ) ) ) 
) 
) 
- 
( 5 * FLOOR( ( DATEVALUE( AW_DateReceived__c ) - DATE( 1900, 1, 8) ) / 7) + 
MIN( 5, 
MOD( DATEVALUE( AW_DateReceived__c ) - DATE( 1996, 1, 1), 7 ) + 
MIN( 1, 1440 / 540 * ( MOD( AW_DateReceived__c - DATETIMEVALUE( &apos;1900-01-08 06:00:00&apos; ), 1) ) ) 
) 
) 
), 
0 ) 
)</formula>
        <inlineHelpText>Multiplied by 60 to reflect in MINUTES</inlineHelpText>
        <label>Time Lapsed With Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LeadType__c</fullName>
        <description>The type of lead is it new or existing book.</description>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Existing Book</fullName>
                </value>
                <value>
                    <fullName>Orphan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Lead_Conversion_Time__c</fullName>
        <description>The time taken for lead conversion</description>
        <formula>(floor((ConvertedDate -  DATEVALUE(CreatedDate))*24))
+
(((((ConvertedDate-  DATEVALUE(CreatedDate))*24)-floor((ConvertedDate -  DATEVALUE(CreatedDate))*24))*60)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_MaritalStatus__c</fullName>
        <description>Checks if the lead is married, single etc.</description>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Common Law</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_NewAdviserRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to check the whether the Lead has been assigned to an existing Adviser.</description>
        <label>New Adviser Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_Occupation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What the lead does for a living.</description>
        <label>Occupation</label>
        <referenceTo>AW_Occupation__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_OfficeWorkNumber__c</fullName>
        <description>Work contact number.</description>
        <label>Office/Work Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AW_OwnerTimeLapsed__c</fullName>
        <description>Time that the lead has been with current owner</description>
        <formula>IF 
( 
Value(AW_LeadTimeCalculated__c) &lt;= 240,
IMAGE(&quot;/resource/1560429216000/Idle_Indicator_Positive&quot;, &quot;positive&quot;, 15, 30), 
IF 
( 
value(AW_LeadTimeCalculated__c) &gt;= 300,
IMAGE(&quot;/resource/1560429428000/Idle_Indicator_Negative&quot;, &quot;negative&quot;, 15, 30), 
IMAGE(&quot;/resource/1560429307000/Idle_Indicator_Neutral&quot;, &quot;neutral&quot;, 15, 30) 
) 
) 
&amp; &quot; &quot; &amp; If(Value(AW_LeadTimeCalculated__c) &lt; 60 , AW_LeadTimeCalculated__c &amp; &quot; minutes elapsed&quot;, Text(Floor(Value(AW_LeadTimeCalculated__c)/60)) &amp; &quot; hours elapsed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays time lapsed in MINUTES until 60 minutes, then displays time lapsed in HOURS</inlineHelpText>
        <label>Time Elapsed with Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PardotOwnerId__c</fullName>
        <description>Used by to reassign leads created from Pardot(WebToLead) to the correct owner.</description>
        <label>Pardot Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PassportCountryOfIssue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Map Passport Country of Issue to account&apos;s Passport country of issue</description>
        <label>Passport Country of Issue</label>
        <referenceTo>AW_Country__c</referenceTo>
        <relationshipLabel>Leads and Referrals</relationshipLabel>
        <relationshipName>Leads_and_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Phase_Stage__c</fullName>
        <description>Current Phase Stage</description>
        <label>From Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PreferredContactTime__c</fullName>
        <description>Stores the preferred time to contact the lead.</description>
        <label>Preferred Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_PreferredName__c</fullName>
        <description>Used to denote name that client prefers to use.</description>
        <inlineHelpText>Used to denote name that client prefers to use.</inlineHelpText>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ProductInterest__c</fullName>
        <description>Denotes risk, investments or retirements</description>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_ProductInterest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_RD_AdviserConsultantCode__c</fullName>
        <description>Captures the owner&apos;s consultant code. This custom field is created for reports that run on Lead and uses the standard report type. We cannot access custom fields of User object via the related owner lookup if we go with custom report type.</description>
        <formula>Owner:User.AW_ConsultantCode__c</formula>
        <label>Adviser Consultant Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ReasonForMatch__c</fullName>
        <description>Reason why the lead has been assigned to you</description>
        <label>Reason for Match</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ReasonForRequest__c</fullName>
        <description>Picklist for the Lead to pick a reason for contacting Liberty from Website.</description>
        <label>Reason For Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I need a life cover</fullName>
                </value>
                <value>
                    <fullName>I need income protection</fullName>
                </value>
                <value>
                    <fullName>I need disability cover</fullName>
                </value>
                <value>
                    <fullName>I need critical illness cover</fullName>
                </value>
                <value>
                    <fullName>I need a funeral plan</fullName>
                </value>
                <value>
                    <fullName>I need a retirement plan</fullName>
                </value>
                <value>
                    <fullName>I need medical aid cover</fullName>
                </value>
                <value>
                    <fullName>I need short-term insurance</fullName>
                </value>
                <value>
                    <fullName>I need advice on financial planning</fullName>
                </value>
                <value>
                    <fullName>I need advice on education</fullName>
                </value>
                <value>
                    <fullName>I need to save</fullName>
                </value>
                <value>
                    <fullName>I need to invest</fullName>
                </value>
                <value>
                    <fullName>I need with help with something else</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_RedirectReason__c</fullName>
        <description>This picklist hold the reason to redirect a lead</description>
        <label>Redirect Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The lead&apos;s product needs are outside of my product specialization</fullName>
                </value>
                <value>
                    <fullName>The lead&apos;s location is too remote</fullName>
                </value>
                <value>
                    <fullName>The lead&apos;s contact details are not correct</fullName>
                </value>
                <value>
                    <fullName>The lead has expressed non-interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_SLA_Reallocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used  to avoid reassigning lead multiple times</description>
        <label>AW SLA Reallocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_SendEmailNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Preset to False/unchecked. This field is set to true when a lead has a new owner via the UI so that a lead assignment email is sent to new owner (via Process Builder). Can also be manually checked on all or selected leads on a bulk load by the Data Loader and admin roles only.
(Used to control the sending or not of email notifications to Sales Leaders and Advisers on new ownership of leads</description>
        <label>Send Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_Status_Change__c</fullName>
        <description>Date &amp; Time of Status Change</description>
        <label>Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AW_SubProductInterest__c</fullName>
        <description>A specific product within the product interest categories (Risk, Investments or retirements)</description>
        <label>Sub Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AW_ProductInterest__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>AW_SubProductInterest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Tenure__c</fullName>
        <description>Period of employment</description>
        <label>Tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_To_Phase__c</fullName>
        <description>The targeted phase</description>
        <label>To Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ValueOfExistingProduct__c</fullName>
        <description>The client current investment value on our books</description>
        <label>Value of Existing Products (AUM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_WhatsApp__c</fullName>
        <description>Click this link to start chatting with client over WhatsApp</description>
        <formula>IF( ISBLANK(MobilePhone) , &quot;Add mobile number to start chatting&quot;, HYPERLINK(&quot;https://wa.me/&quot;&amp;MobilePhone, &quot;Chat on&quot; &amp; IMAGE(&quot;/resource/AW_WhatsappLogo&quot;,&apos;WhatsApp&apos;,30,30), &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The mobile number format must have the country code e.g. 27765065590</inlineHelpText>
        <label>WhatsApp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ConversionDateTime__c</fullName>
        <formula>NOW()</formula>
        <label>Conversion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedByMe__c</fullName>
        <formula>IF(  FinServ__ReferredByUser__c = $User.Id,True,False)</formula>
        <label>Created By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedFromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ExpressedInterest__c</fullName>
        <label>Expressed Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__ProductList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this Referral rolls up to.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Referrals</relationshipLabel>
        <relationshipName>HouseholdReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__PotentialValue__c</fullName>
        <label>Potential Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Account or Contact that referred the lead</inlineHelpText>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Referrals</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>LeadUserReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <description>Referrer score from internal/external referrer</description>
        <formula>IF(NOT(ISBLANK(FinServ__ReferredByUser__c)),FinServ__ReferredByUser__r.FinServ__ReferrerScore__c,IF(NOT(ISBLANK(FinServ__ReferredByContact__c)),FinServ__ReferredByContact__r.FinServ__ReferrerScore__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>RelatedLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Group__c</fullName>
        <label>Assigned From Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assigned_From_Queue__c</fullName>
        <description>Assigned from queue</description>
        <label>Assigned From Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Seq__c</fullName>
        <description>Assignment sequence number</description>
        <label>Assignment_Seq</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_Assign_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Q-Assign exclude</description>
        <label>Q Assign Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_assign_Custom_Seq__c</fullName>
        <description>Q-assign custom assign sequence</description>
        <label>Q-assign Custom Seq</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_assign_Last_Assigned_Date__c</fullName>
        <description>Q-assign last assigned date</description>
        <label>Q-assign Last Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Reviewed_Days__c</fullName>
        <formula>LastModifiedDate - ortoo_qra__Q_assign_Last_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q-assign Reviewed Days</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>